--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,19 @@
 Package: TidyR
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Tidying and Plotting Data 
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Authors@R: c(person("Kate", "Mullins", email="mullinsk38@gmail.com", role=c("aut", "cre")),
+  person("Erin", "Weadick", email="erin.weadick.2022@mumail.ie", role=c("aut","cre")),
+  person("Laurynas", "Jonikas", email="laurynas.jonikas.2025@mumail.ie", role=c("aut","cre")),
+  person("Daniel", "McKean", email="daniel.mckean.2021@mumail.ie", role = c("aut","cre")))
+Maintainer: <mullinsk38@gmail.com>
+Description: This package loads in a data file and tidies it by removing any NA values (spaces) and 
+    replacing them with dashes to make it easier to work with. The package also includes a function
+    that returns a plot of an inputted x and y.
+License: GPL (>= 3)
 Encoding: UTF-8
 LazyData: true
+URL:
+BugReports:
+Depends: 
+    R (>= 3.5)
