--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,15 +17,17 @@ URL: https://github.com/erinweadick/TidyR
 BugReports: https://github.com/erinweadick/TidyR/issues
 Depends: R (>= 3.5)
 Imports:
-    usethis,
+    magrittr,
     readr,
     ggplot2,
     dplyr,
-    janitor
+    janitor,
+    usethis
 Suggests:
     testthat (>= 3.0.0),
     knitr,
     rmarkdown
 VignetteBuilder: knitr
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.1.2
+RoxygenNote: 7.3.2
+Config/testthat/edition: 3
