All erorrs fixed

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,5 +15,6 @@ importFrom(ggplot2,theme_minimal)
 importFrom(janitor,clean_names)
 importFrom(magrittr,"%>%")
 importFrom(readr,read_csv)
+importFrom(rlang,.data)
 importFrom(stats,na.omit)
 importFrom(usethis,use_data)
