--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,7 +21,8 @@ Imports:
     readr,
     ggplot2,
     janitor,
-    usethis
+    usethis,
+    rlang
 Suggests:
     testthat (>= 3.0.0),
     knitr,
