--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,20 @@
+# R artifacts
 .Rproj.user
 .Rhistory
 .RData
 .Ruserdata
+*.Rproj
+
+# Build artifacts
+*.tar.gz
+*.Rcheck/
+Meta/
+docs/
+
+
+# Test outputs
+tests/testthat/_snaps/
+
+# System files
+.DS_Store
+Thumbs.db
